--- a/package.json
+++ b/package.json
@@ -95,9 +95,13 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "jquery": "^3.6.4",
+    "nanoid": "^3.3.6",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
@@ -110,7 +114,9 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.4.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -153,7 +159,7 @@
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^4.1.2",
-    "sass": "^1.58.0",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
